# CrazyMatching

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
.gemini/: 1024038.html  GEMINI.md  gemini-Fri Aug  1 05:02:35 UTC 2025.cast  gemini-Fri Aug  1 06:05:58 UTC 2025.cast  gemini-Fri Jul 25 02:38:58 UTC 2025.cast  gemini-Fri Jul 25 05:39:55 UTC 2025.cast  gemini-Fri Jul 25 07:06:03 UTC 2025.cast  gemini-Fri Jul 25 07:27:43 UTC 2025.cast  gemini-Fri Jul 25 08:10:44 UTC 2025.cast  gemini-Fri Jul 25 08:33:48 UTC 2025.cast  gemini-Mon Aug  4 06:20:23 UTC 2025.cast  gemini-Mon Jul 21 12:09:53 PM UTC 2025.cast  gemini-Mon Jul 21 12:17:34 PM UTC 2025.cast  gemini-Sat Jul 26 10:54:18 UTC 2025.cast  gemini-Sat Jul 26 11:37:14 UTC 2025.cast  gemini-Sat Jul 26 13:07:39 UTC 2025.cast  gemini-Sun Jul 20 01:39:11 AM UTC 2025.cast  gemini-Sun Jul 20 12:08:21 PM UTC 2025.cast  gemini-Sun Jul 27 01:05:31 UTC 2025.cast  gemini-Sun Jul 27 01:28:22 UTC 2025.cast  gemini-Thu Jul 31 14:56:41 UTC 2025.cast  gemini-Thu Jul 31 15:51:54 UTC 2025.cast  gemini-Tue Jul 22 12:39:17 PM UTC 2025.cast  gemini-Wed Aug  6 14:20:38 UTC 2025.cast  gemini-Wed Jul 30 13:52:11 UTC 2025.cast
assets/: index-0c3D5vK9.js  index-1llKqosz.css  index-PGx7u3fq.js
model/: README.md  requirements.txt  test.py  train.py
src/: global.d.ts  main.ts  model.ts  style.css
tfod_coco_ssd/: .gitignore  fine-tune.sh  pipeline.config
torch_ssd/: .gitignore  README.md  convert.py  data_utils.py  evaluate.py  (+2 more)
(+9 files in other folders)
